--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,4 +1,5 @@
 @use '@uqds/core/src/scss/global' as core;
+@use "@uqds/icon/src/scss/global" as icon-constants;
 @use 'global' as *;
 
 // Accordion / Toggle style
@@ -60,7 +61,7 @@
     // Closed state.
     &::before {
       content: '';
-      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cdefs%3e%3cstyle%3e.a%7bfill:none;stroke:currentColor;stroke-linecap:round;stroke-linejoin:round;%7d%3c/style%3e%3c/defs%3e%3ctitle%3eadd%3c/title%3e%3cline class='a' x1='12' y1='1' x2='12' y2='23'/%3e%3cline class='a' x1='23' y1='12' x2='1' y2='12'/%3e%3c/svg%3e");
+      background-image: url(icon-constants.get-icon('standard--arrow-down-1', core.$uq-purple));
       background-repeat: no-repeat;
       width: core.$space;
       height: core.$space;
@@ -86,7 +87,7 @@
 
       // Open state.
       &::before {
-        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cdefs%3e%3cstyle%3e.a%7bfill:none;stroke:currentColor;stroke-linecap:round;stroke-linejoin:round;%7d%3c/style%3e%3c/defs%3e%3ctitle%3esubtract%3c/title%3e%3cline class='a' x1='23.5' y1='12' x2='0.5' y2='12'/%3e%3c/svg%3e");
+        background-image: url(icon-constants.get-icon('standard--arrow-up-1', core.$uq-purple));
       }
 
       &:hover {
