--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -1,4 +1,5 @@
 @use '@uqds/core/src/scss/global' as core;
+@use "@uqds/icon/src/scss/global" as icon-constants;
 @import 'global';
 
 // Breadcrumb
@@ -25,8 +26,9 @@
 
     &::before {
       content: '';
-      padding: 0.65rem 0.75rem;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-5 -6 24 24' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+      margin: core.$space-xs core.$space-sm;
+      padding: core.$space-sm core.$space-sm;
+      background-image: url(icon-constants.get-icon('standard--arrow-right-1', core.$uq-neutral-dark60));
       background-repeat: no-repeat;
       float: left;
     }
