--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -1,4 +1,5 @@
 @use "@uqds/core/src/scss/global" as core;
+@use "@uqds/icon/src/scss/global" as icon-constants;
 @use 'global' as *;
 
 .uq-side-nav {
@@ -98,11 +99,13 @@
         position: absolute;
         top: 0;
         right: 0;
-        display: none; //block 
+        display: none; //block
         width: 3rem;
-        padding: core.$space core.$space-md;
+        height: 3.5rem;
+        padding: core.$space core.$space;
         text-indent: -100vw;
-        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%2351247A'%3E%3Cpath d='M14.285 5.145l-6 6.167a.41.41 0 01-.598 0L1.715 5.145' fill='none' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        background-image: url(icon-constants.get-icon('standard--arrow-down-1', core.$uq-purple));
+        background-size: 1.2rem;
         background-position: center center;
         background-repeat: no-repeat;
         overflow: hidden;
@@ -111,7 +114,7 @@
       &--open, 
       &--has-subnav:focus {
         .uq-side-nav__list-item__sub-toggle {
-          background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%2351247A'%3E%3Cpath d='M1.715 10.855l6-6.168a.41.41 0 01.597 0l5.973 6.168' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+          background-image: url(icon-constants.get-icon('standard--arrow-up-1', core.$uq-purple));
         }
 
         .uq-side-nav__list--level-2 {
