--- a/packages/storybook-html/src/components/side-nav/side-nav-multi-level.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav-multi-level.html
@@ -14,6 +14,7 @@
       </li>
       <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active uq-side-nav__list-item--open">
         <a href="#" class="uq-side-nav__link">Item 2</a>
+        <!--<span class="uq-side-nav__list-item__sub-toggle"></span>-->
         <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side nav item 2 submenu">
           <li class="uq-side-nav__list-item">
             <a href="#" class="uq-side-nav__link">Item 2.1</a>
