--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -1,24 +1,24 @@
 <!-- Page header (default) -->
 
 <div class="uq-hero">  
-  <div class="uq-hero__content">
-    <div class="uq-hero__text">
-      <h1>Page title</h1>
+  <div class="uq-hero__container">
+    <div class="uq-hero__content">
+      <div class="uq-hero__title">Page title</div>
     </div>
   </div>
 </div>
 <br>
 <!-- Page header (with really long title) -->
 <div class="uq-hero">  
-  <div class="uq-hero__content">
-    <div class="uq-hero__text">
-          <h1>Parturient facilisi erat parturient vestibulum laoreet quam condimentum nullam</h1>
+  <div class="uq-hero__container">
+    <div class="uq-hero__content">
+          <h1 class="uq-hero__title">Parturient facilisi erat parturient vestibulum laoreet quam condimentum nullam</h1>
     </div>
   </div>
 </div>
 <br>
 <!-- Page header (with image) -->
-<div class="uq-hero uq-hero--feature-image">  
+<div class="uq-hero uq-hero--banner">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
       <img src="/images/hero/hero-example--small.jpg" />
@@ -27,11 +27,13 @@
       <img src="/images/hero/hero-example--large.jpg" />
     </div>
   </div>
-  <div class="uq-hero__content">
-    <div class="uq-hero__text">
-      <h1>Start postgraduate study online</h1>
+  <div class="uq-hero__container">
+    <div class="uq-hero__content">
+      <h1 class="uq-hero__title">Start postgraduate study online</h1>
       <p class="uq-hero__subtext">Apply by June 30</p>
-      <p><a class="uq-button" href="#">Learn more</a></p>
+      <div class="uq-hero__action">
+        <p><a class="uq-button" href="#">Learn more</a></p>
+      </div>
     </div>
   </div>
 </div>
