--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -200,44 +200,8 @@
   </div>
 </div>
 
-<!-- alert -->
-<div class="uq-alert uq-alert--default" role="alert">
-  <div class="uq-alert__container">
-    <div class="uq-alert__message">
-      <b>I'm a default alert.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </div>
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
-<div class="uq-alert uq-alert--info" role="alert">
-  <div class="uq-alert__container">
-    <div class="uq-alert__message">
-      <b>I come in a variety of styles and configurations.</b> See the <code>alerts</code> story for more examples.</a>
-    </div>
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
-<div class="uq-alert uq-alert--success" role="alert">
-  <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
-<div class="uq-alert uq-alert--warning" role="alert">
-  <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
-<div class="uq-alert uq-alert--danger" role="alert">
-  <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
-
 <!-- hero -->
-<div class="uq-hero uq-hero--feature-image">  
+<div class="uq-hero uq-hero--large-banner">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
       <img src="/images/hero/hero-example--small.jpg" />
@@ -246,11 +210,13 @@
       <img src="/images/hero/hero-example--large.jpg" />
     </div>
   </div>
-  <div class="uq-hero__content">
-    <div class="uq-hero__text">
-      <h1>Hero banner with feature image</h1>
-      <p class="uq-hero__subtext">Banner sub text</p>
-      <p><a class="uq-button" href="#">Call to action</a></p>
+  <div class="uq-hero__container">
+    <div class="uq-hero__content">
+      <div class="uq-hero__title">Hero banner with feature image and a long title</div>
+      <div class="uq-hero__subtext">Lorem ipsum dolar sit amet</div>
+      <div class="uq-hero__action">
+        <a class="uq-button" href="#">Call to action</a>
+      </div>
     </div>
   </div>
 </div>
