--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -201,40 +201,87 @@
 </div>
 
 <!-- alert -->
-<div class="uq-alert uq-alert--default" role="alert">
-  <div class="uq-alert__container">
-    <div class="uq-alert__message">
-      <b>I'm a default alert.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </div>
-  </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
-</div>
 <div class="uq-alert uq-alert--info" role="alert">
-  <div class="uq-alert__container">
-    <div class="uq-alert__message">
-      <b>I come in a variety of styles and configurations.</b> See the <code>alerts</code> story for more examples.</a>
-    </div>
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>
   </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <div class="uq-alert uq-alert--success" role="alert">
   <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
+    <p>This is a success alert</p>
   </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <div class="uq-alert uq-alert--warning" role="alert">
   <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
+    <p>This is a warning alert</p>
   </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="uq-alert uq-alert--danger" role="alert">
+<div class="uq-alert uq-alert--error" role="alert">
   <div class="uq-alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
+    <p>This is a error alert</p>
   </div>
-  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
+<br />
+
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>    
+    <a href="#" title="Link" class="uq-button--inline">Link</a>
+  </div>
+</div>
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>    
+    <a href="#" title="Button" class="uq-button">Button</a>
+  </div>
+</div>
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <h3 class="uq-alert__title">Heading</h3>
+    <p>This is a default info alert</p>  
+  </div>
+</div>
+<br />
+
+<div class="uq-alert uq-alert--info uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global info alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+    <a href="javascript:void(0)" class="uq-alert__close">Close</a>
+  </div>
+</div>
+<div class="uq-alert uq-alert--success uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global success alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+    <a href="javascript:void(0)" class="uq-alert__close">Close</a>
+  </div>
+</div>
+<div class="uq-alert uq-alert--warning uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global warning alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+  </div>
+</div>
+<div class="uq-alert uq-alert--error uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global error alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+  </div>
+</div>
+<br/>
 
 <!-- hero -->
 <div class="uq-hero uq-hero--feature-image">  
@@ -254,9 +301,9 @@
     </div>
   </div>
 </div>
+<br/>
 
 <!-- breadcrumb -->
-<br/>
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <nav aria-label="uq-breadcrumb">
