--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -63,39 +63,39 @@ $use-encapsulation: false !default;
   }
   
   h1 {
-    margin-top: core.$space-m;
+    margin-top: core.$space-xl;
     margin-bottom: core.$space-xl;
     font-size: core.$font-size-xxxl;
     font-family: core.$font-title;
   }
   
   h2 {
-    margin-top: core.$space-xl;
-    margin-bottom: core.$space-m;
+    margin-top: core.$space-l;
+    margin-bottom: core.$space-l;
     font-size: core.$font-size-xxl;
   }
   
   h3 {
-    margin-top: core.$space-l;
-    margin-bottom: core.$space;
+    margin-top: core.$space-m;
+    margin-bottom: core.$space-m;
     font-size: core.$font-size-xl;
   }
   
   h4 {
-    margin-top: core.$space-l;
-    margin-bottom: core.$space-m;
+    margin-top: core.$space;
+    margin-bottom: core.$space;
     font-size: core.$font-size-l;
   }
   
   h5 {
-    margin-top: core.$space-m;
-    margin-bottom: core.$space;
+    margin-top: core.$space-s;
+    margin-bottom: core.$space-s;
     font-size: core.$font-size-m;
   }
   
   h6 {
-    margin-top: core.$space-m;
-    margin-bottom: core.$space-s;
+    margin-top: core.$space-xs;
+    margin-bottom: core.$space-xs;
     font-size: core.$font-size;
   }
   
