Revert p tag margin change

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -101,7 +101,7 @@ $use-encapsulation: false !default;
   
   p {
     margin-top: core.$space-none;
-    margin-bottom: core.$space;
+    margin-bottom: core.$space-m;
   }
   
   b,
