revise and update accessibility and when to use docs

--- a/packages/storybook-html/src/components/loading-spinner/loading-spinner.html
+++ b/packages/storybook-html/src/components/loading-spinner/loading-spinner.html
@@ -1,1 +1,3 @@
-<div class="uq-loading-spinner"></div>
+<div class="uq-loading-spinner" role="alert" aria-live="assertive">
+    <span>Loading...</span>
+</div>
