--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -16,7 +16,7 @@
                     <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
                     <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
                     <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-                    <li class="uq-header__search-toggle">
+                    <li class="uq-header__navigation uq-header__search-toggle">
                         <button class="uq-header__search-toggle-button">Toggle Search</button>
                     </li>
                 </ul>
