--- a/packages/storybook-html/src/components/header/header_no-local-search.html
+++ b/packages/storybook-html/src/components/header/header_no-local-search.html
@@ -16,7 +16,7 @@
                     <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
                     <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
                     <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-                    <li class="uq-header__search-toggle">
+                    <li class="uq-header__navigation uq-header__search-toggle">
                         <button class="uq-header__search-toggle-button">Toggle Search</button>
                     </li>
                 </ul>
@@ -29,7 +29,7 @@
                         <span class="uq-header__search-title">What are you looking for?</span>
                     </legend>
                     <span class="uq-header__search-title" tabindex="0">What are you looking for?</span>
-                    <div class="uq-header__search-scope" tabindex="0">Search all UQ websites</div>
+                    <span class="uq-header__search-scope" tabindex="0">Search all UQ websites</span>
                 </fieldset>
                 <div class="uq-header__search-query">
                     <label for="edit-q" class="visually-hidden">Search term</label>
