--- a/packages/storybook-html/src/components/core/_typography.scss
+++ b/packages/storybook-html/src/components/core/_typography.scss
@@ -8,7 +8,7 @@
 
 .uqds-font {
   &--roboto {
-    font-family: core.$roboto;
+    font-family: core.$roboto !important;
   }
 
   &--merriweather {
@@ -16,7 +16,7 @@
   }
   
   &--montserrat {
-    font-family: core.$montserrat;
+    font-family: core.$montserrat !important;
   }
 
   &--italic {
@@ -29,5 +29,17 @@
 
   &--500 {
     font-weight: 500;
+  }
+
+  &--lead {
+    font-size: 1.25rem;
+  }
+
+  &--small {
+    font-size: .875rem;
+  }
+
+  &--xsmall {
+    font-size: .75rem;
   }
 }
